@@ -2,6 +2,7 @@
 
 	* fixed bug #7587: Accesscheck for Workspaceselector, credits Steffen Kamper
 	* fixed bug #7588: Accesscheck for clearCache
+	* added feature #7592: Enable tabs for be_users, credits Francois Suter
 
 2008-02-22  Benjamin Mack  <mack@xnos.org>
 
